Make first add address test pass